save photo, asynkTask and cropping

--- a/app/src/main/res/layout-land/details_activity.xml
+++ b/app/src/main/res/layout-land/details_activity.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:baselineAligned="false"
     android:background="#000"
     android:weightSum="100"
     android:gravity="center">
@@ -46,14 +47,14 @@
                 android:text="Brightness"
                 android:id="@+id/tvBri"
                 android:textColor="#ffffff"
-                android:textSize="18dp" />
+                android:textSize="18sp" />
 
             <SeekBar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/sbBri"
                 android:max="255"
-                android:progress="5">
+                android:progress="1">
 
             </SeekBar>
 
@@ -70,17 +71,24 @@
                 android:layout_height="wrap_content"
                 android:text="Contrast"
                 android:textColor="#ffffff"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:id="@+id/tvContr" />
             <SeekBar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/sbContr"
                 android:max="255"
-                android:progress="5"></SeekBar>
+                android:progress="1"></SeekBar>
 
         </LinearLayout>
     </LinearLayout>
+    <HorizontalScrollView
+        android:gravity="left|center"
+        android:id="@+id/HImages"
+        android:layout_width="0dp"
+        android:weightSum="20"
+        android:layout_weight="15"
+        android:layout_height="match_parent">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="0dp"
@@ -91,34 +99,37 @@
         android:layout_weight="15">
         <Button
             android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_height="50dp"
             android:text="ORIGINAL"
             android:id="@+id/ivOriginal"
             android:background="@drawable/roundshapebtn"
-            android:layout_marginBottom="5dp" />
+            android:layout_marginBottom="5sp"
+            android:textSize="15sp" />
         <Button
             android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_height="50dp"
             android:text="SNOW"
             android:id="@+id/ivSnow"
             android:background="@drawable/roundshapebtn"
             android:layout_marginBottom="5dp" />
         <Button
             android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_height="50dp"
             android:id="@+id/ivSaturation"
             android:text="SATURATION"
             android:background="@drawable/roundshapebtn"
-            android:layout_marginBottom="5dp" />
+            android:layout_marginBottom="5dp"
+            android:textSize="15sp" />
         <Button
             android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_height="50dp"
             android:id="@+id/ivCorner"
             android:text="CORNER"
-            android:background="@drawable/roundshapebtn" />
+            android:background="@drawable/roundshapebtn"
+            android:textSize="15sp" />
         <Button
             android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_height="50dp"
 
             android:id="@+id/ivBoost"
             android:text="BOOST_RED"
@@ -126,7 +137,7 @@
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp" />
 
-    </LinearLayout>
+    </LinearLayout></HorizontalScrollView>
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -140,14 +151,13 @@
 
         android:layout_width="match_parent"
         android:gravity="left|center"
-        android:layout_weight="15"
         android:foregroundGravity="center">
         <Button
             android:layout_width="65dp"
             android:layout_height="30dp"
 
             android:id="@+id/bSize"
-            android:text="Size"
+            android:text="CROP"
             android:background="@drawable/roundshapebtn"
             android:textColor="#ffffff"
             android:layout_margin="5dp" />
@@ -182,11 +192,11 @@
         <Button
             android:layout_width="65dp"
             android:layout_height="30dp"
-            android:text="Share"
+            android:text="SHARE"
             android:id="@+id/bShare"
             android:background="@drawable/roundshapebtn"
             android:layout_margin="5dp"
-            android:textColor="#ffffff" />
+            android:textColor="#da08b7" />
 
         <Button
             android:layout_width="65dp"
@@ -195,7 +205,7 @@
             android:id="@+id/bSave"
             android:layout_margin="5dp"
             android:background="@drawable/roundshapebtn"
-            android:textColor="#ffffff" />
+            android:textColor="#39f906" />
         <Button
             android:layout_width="65dp"
             android:layout_height="30dp"
