--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,11 +37,13 @@
 
     <Button
         android:id="@+id/button_capture"
-        android:text="Capture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:text="OK"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:visibility="gone"
         android:layout_gravity="center"
-        />
+        android:background="@drawable/roundshapebtn"
+        android:singleLine="true" />
 
 
 
